--- a/pagina1.html
+++ b/pagina1.html
@@ -30,7 +30,7 @@
     </div> 
     <p>no logro que la música se quede mientras pasas páginas así que quédate un poquito y en la otra se reinica je</p>   
      
-    <audio id="musica" autoplay loop>
+    <audio id="musica" controls loop>
         <source src="audio/There Will Never Be Another You - Lester Young.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
     </audio>
